Fix T45241: New depsgraph was lacking update of python drivers on time change

It's quite tricky to see if the driver actually depends on time or not,
so currently used approach when we'll be doing some extra updates.

This seems to correspond to how old depsgraph was dealing with this.